--- a/package.json
+++ b/package.json
@@ -3,10 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/jest": "24.0.11",
-    "@types/node": "11.11.4",
-    "@types/react": "16.8.8",
-    "@types/react-dom": "16.8.2",
     "node-sass": "^4.11.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
@@ -14,7 +10,10 @@
     "typescript": "3.3.4000"
   },
   "scripts": {
+    "tslint": "tslint -c tslint.json -p tsconfig.json",
+    "prestart": "npm i && npm run tslint",
     "start": "react-scripts start",
+    "prebuild": "npm run prestart",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -27,5 +26,12 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "@types/jest": "24.0.11",
+    "@types/node": "11.11.4",
+    "@types/react": "16.8.8",
+    "@types/react-dom": "16.8.2",
+    "tslint": "^5.14.0"
+  }
 }
