--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "assisr-star-quiz",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://adowtatep.github.io/assisr-star-quiz",
   "dependencies": {
     "node-sass": "^4.11.0",
     "react": "^16.8.4",
@@ -16,7 +17,9 @@
     "prebuild": "npm run prestart",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -32,6 +35,7 @@
     "@types/node": "11.11.4",
     "@types/react": "16.8.8",
     "@types/react-dom": "16.8.2",
+    "gh-pages": "^2.0.1",
     "tslint": "^5.14.0"
   }
 }
