--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "node-sass": "^4.11.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
     "typescript": "3.3.4000"
   },
@@ -35,6 +36,7 @@
     "@types/node": "11.11.4",
     "@types/react": "16.8.8",
     "@types/react-dom": "16.8.2",
+    "@types/react-router-dom": "^4.3.1",
     "gh-pages": "^2.0.1",
     "tslint": "^5.14.0"
   }
