--- a/src/AssisrStarQuiz/Config.json
+++ b/src/AssisrStarQuiz/Config.json
@@ -1,4 +1,4 @@
 {
     "swApi": "https://swapi.co/api",
-    "googleImages": "https://ajax.googleapis.com/ajax/services/search/images"
+    "googleImages": "https://www.googleapis.com/customsearch/v1"
 }
