--- a/src/AssisrStarQuiz/Config.json
+++ b/src/AssisrStarQuiz/Config.json
@@ -1,4 +1,5 @@
 {
     "swApi": "https://swapi.co/api",
-    "googleImages": "https://www.googleapis.com/customsearch/v1"
+    "googleImages": "https://www.googleapis.com/customsearch/v1",
+    "bingImages": "https://api.cognitive.microsoft.com/bing/v7.0/images/search"
 }
