:sparkles: Added finish screen when the timer counts down

--- a/src/AssisrStarQuiz/Config.json
+++ b/src/AssisrStarQuiz/Config.json
@@ -1,5 +1,6 @@
 {
     "swApi": "https://swapi.co/api",
     "googleImages": "https://www.googleapis.com/customsearch/v1",
-    "bingImages": "https://api.cognitive.microsoft.com/bing/v7.0/images/search"
+    "bingImages": "https://api.cognitive.microsoft.com/bing/v7.0/images/search",
+    "countdownLimitInSeconds": 2
 }
