--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "moment": "^2.24.0",
     "node-sass": "^4.11.0",
+    "open-iconic": "^1.1.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-router-dom": "^5.0.0",
